--- a/src/styles/GettingStarted-Homepage.css
+++ b/src/styles/GettingStarted-Homepage.css
@@ -5,7 +5,6 @@
 
 
 .Getting-Started{
-    padding-bottom: 5vh;
 }
 
 .GettingStarted-Title{
